# bos

./: .gitignore  Cargo.toml  LICENSE  README.md  bakery.toml  build-local.sh  can-you-begin-a-composed-beacon.md
.claude/agent-memory/prod-readiness-auditor/: MEMORY.md  project-bos-patterns.md
.forgejo/workflows/: bibata.yml  calamares.yml  mirror.yml  package.yml  powerlevel10k.yml  release-iso.yml
bos-settings/: Cargo.toml
bos-settings/src/: main.rs  state.rs  theme.rs
bos-settings/src/config/: mod.rs
bos-settings/src/ui/: mod.rs  sidebar.rs  widgets.rs  window.rs
bos-settings/src/ui/views/: bread.rs  breadbar.rs  breadbox.rs  breadcrumbs.rs  breadpad.rs  hyprland.rs  mod.rs  packages.rs  snapshots.rs
dotfiles/bread/: init.lua
dotfiles/breadcrumbs/: breadcrumbs.toml
dotfiles/hypr/: hyprland.conf  keybinds.conf
dotfiles/hyprland/: hyprland.conf
iso/: packages.x86_64  pacman.conf  post-install.sh  profiledef.sh
iso/airootfs/etc/: pacman.conf
iso/airootfs/etc/calamares/: post-install.sh  settings.conf
iso/airootfs/etc/default/: useradd
iso/airootfs/etc/greetd/: config.toml
iso/airootfs/etc/pacman.d/: mirrorlist
iso/airootfs/etc/profile.d/: bos-local-bin.sh
iso/airootfs/etc/skel/: .p10k.zsh  .zshrc
iso/airootfs/root/: .bash_profile
iso/grub/: grub.cfg  loopback.cfg
iso/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg
packaging/arch/: PKGBUILD  README.md  bos-settings.desktop
packaging/bibata/: PKGBUILD
packaging/calamares/: PKGBUILD
packaging/powerlevel10k/: PKGBUILD
scripts/: smoke-test.sh
(+45 files in other folders)
